syntax = "proto2";

option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/rcon";

import "ssl_gc_game_event.proto";
import "ssl_gc_rcon.proto";

// AutoRefRegistration is the first message that a client must send to the controller to identify itself
message AutoRefRegistration {
    // identifier is a unique name of the client
    required string identifier = 1;
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 2;
}

// AutoRefToController is the wrapper message for all subsequent messages from the autoRef to the controller
message AutoRefToController {
    // reserve fields for removed fields
    reserved 3, 4;
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 1;
    // game_event is an optional event that the autoRef detected during the game
    optional GameEvent game_event = 2;

    // metadata on the current game state
    optional GameStateMetadata game_state_metadata = 5;
}

message GameStateMetadata {
    // if current state is prepare_kickoff, prepare_penalty, stop or ball_placement:
    // true: all conditions are met to continue from the current state
    // false: at least one condition not met yet
    // not present: not supported by the autoRef
    // else:
    // undefined
    optional bool ready_to_continue = 1;

    // if current state is stop:
    // true: ball placement not required, can directly continue
    // false: need to initiate ball placement
    // if current state is ball placement:
    // true: ball placement done, all conditions met
    // false: ball not yet placed successfully
    optional bool ball_placed = 2;

    // UNIX timestamp [Î¼s] when the ball last moved
    // Used by the GC to determine if there is still progress
    optional uint64 last_progress = 3;

    // Metadata of team blue
    optional GameStateMetadataTeam team_blue = 4;
    // Metadata of team yellow
    optional GameStateMetadataTeam team_yellow = 5;
}

// Metadata of a single team
message GameStateMetadataTeam {
    // Number of robots currently on the field
    optional uint32 number_of_robots = 1;

    // When the ball is in play, this flag indicates, if this team may change the keeper in confirmation with the rules
    optional bool may_change_keeper = 2;
}

// ControllerToAutoRef is the wrapper message for all messages from controller to autoRef
message ControllerToAutoRef {
    oneof msg {
        // a reply from the controller
        ControllerReply controller_reply = 1;
    }
}